--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.1.1
   http: ^1.0.0
   qr_flutter: ^4.1.0
+  country_flags: ^3.0.0
   base_x: ^2.0.1
   flutter_launcher_icons: ^0.14.1
   
