--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -42,7 +42,7 @@ jobs:
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/createaccount:latest .
 
     - name: Create Container for web (version tag)
-      run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}/createaccount:latest ${{ secrets.DOCKERHUB_USERNAME }}/createaccount:{{ steps.read-version.outputs.version-number }}
+      run: docker tag ${{ secrets.DOCKERHUB_USERNAME }}/createaccount:latest ${{ secrets.DOCKERHUB_USERNAME }}/createaccount:${{ steps.read-version.outputs.version-number }}
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
