--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0
 
 environment:
-  sdk: 3.5.3
+  sdk: 3.6.1
   flutter: 3.24.1
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   lottie: ^3.0.0
   provider: ^6.1.1
   http: ^1.0.0
@@ -19,6 +18,7 @@ dependencies:
   country_flags: ^3.0.0
   base_x: ^2.0.1
   flutter_launcher_icons: ^0.14.1
+  archive: ^4.0.6
   
   slider_captcha:
     git:
