--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.1.0
 
 environment:
-  sdk: 3.6.1
-  flutter: 3.24.1
+  sdk: 3.9.2
+  flutter: 3.35.5
 dependencies:
   flutter:
     sdk: flutter
@@ -15,7 +15,7 @@ dependencies:
   provider: ^6.1.1
   http: ^1.0.0
   qr_flutter: ^4.1.0
-  country_flags: ^3.0.0
+  country_flags: ^4.1.0
   base_x: ^2.0.1
   flutter_launcher_icons: ^0.14.1
   archive: ^4.0.6
@@ -41,12 +41,13 @@ dependencies:
   ##Internationalization
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.0
+  flutter_gen: ^5.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 flutter:
   generate: true
   uses-material-design: true
@@ -59,7 +60,6 @@ flutter:
     - assets/
     - assets/fonts/
     - assets/fr0g/
-    - assets/images/
     - assets/lottie/
 
 flutter_icons:
