--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   eosdart_ecc: ^0.4.4
   auto_size_text: ^3.0.0
   url_launcher: ^6.0.12
+  web: ^1.1.1
 
   ##Print Certificate
   pdf: ^3.10.8
